readme and style updated

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         :root {
             --primary-color:#3b4368;
             --secondary-color:  #689cc5 ;
+            --white: #fff;
         }
         body {
             margin: 0;
             padding: 0;
-            background-color: #fff;
+            background-color: var(--white);
         }
 
         * {
@@ -69,7 +70,7 @@
         .card:hover{
             transition: .3s all ease-in-out;
             background:linear-gradient(120deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-            color: #f4f4fe;
+            color: var(--white);
             box-shadow: none;
         }
 
@@ -89,7 +90,7 @@
 
         #phone:hover {
             cursor: pointer;
-            color: #f4f4fe;
+            color: var(--white);
             transition: .3s all ease-in-out;
         }
 
@@ -132,9 +133,9 @@
             console.log(searchContent)
 
             //return names that matches search content
-            const filtered = contactList.filter(detail => {
+            const filtered = contactList.filter(card => {
                 return (
-                    detail.name.toLowerCase().includes(searchContent)
+                    card.name.toLowerCase().includes(searchContent)
                 )
             })
             displayContacts(filtered)
