--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         .title {
             font-size: 1.5em;
             color: var(--primary-color);
-            margin: 20px 0;
+            padding-top: 50px;
+            margin-bottom: 20px;
         }
         .form-input {
             text-align: center;
